Fixing line returns

--- a/index.html
+++ b/index.html
@@ -192,7 +192,8 @@
       "‘Tis time",
       "I should inform thee farther. Lend thy hand",
       "And pluck my magic garment from me.",
-      "Lie there, my art.—Wipe thou thine eyes. Have comfort. The direful spectacle of the wrack, which touched",
+      "Lie there, my art.—Wipe thou thine eyes.",
+      "Have comfort. The direful spectacle of the wrack, which touched",
       "The very virtue of compassion in thee,",
       "I have with such provision in mine art",
       "So safely ordered that there is no soul—",
@@ -204,7 +205,8 @@
       "‘T t",
       "I s i t f. L t h",
       "A p m m g f m.",
-      "L t, m a.—W t t e. H c. T d s o t w, w t",
+      "L t, m a.—W t t e.",
+      "H c. T d s o t w, w t",
       "T v v o c i t,",
       "I h w s p i m a",
       "S s o t t i n s—",
@@ -314,12 +316,14 @@
     ],
     "prospero_lines": [
       "Thy mother was a piece of virtue, and",
-      "She said thou wast my daughter. And thy father Was Duke of Milan, and his only heir",
+      "She said thou wast my daughter. And thy father",
+      "Was Duke of Milan, and his only heir",
       "And princess no worse issued."
     ],
     "prospero_nitwood": [
       "T m w a p o v, a",
-      "S s t w m d. A t f W D o M, a h o h",
+      "S s t w m d. A t f",
+      "W D o M, a h o h",
       "A p n w i."
     ],
     "correct": null
@@ -335,11 +339,13 @@
     ],
     "prospero_lines": [
       "Both, both, my girl.",
-      "By foul play, as thou sayst, were we heaved thence, But blessedly holp hither."
+      "By foul play, as thou sayst, were we heaved thence,",
+      "But blessedly holp hither."
     ],
     "prospero_nitwood": [
       "B, b, m g.",
-      "B f p, a t s, w w h t, B b h h."
+      "B f p, a t s, w w h t,",
+      "B b h h."
     ],
     "correct": null
   },
@@ -353,7 +359,9 @@
       "To think o’ th’ teen that I have turned you to, Which is from my remembrance. Please you, farther."
     ],
     "prospero_lines": [
-      "My brother and thy uncle, called Antonio— I pray thee, mark me—that a brother should Be so perfidious!—he whom next thyself",
+      "My brother and thy uncle, called Antonio—",
+      "I pray thee, mark me—that a brother should",
+      "Be so perfidious!—he whom next thyself",
       "Of all the world I loved, and to him put",
       "The manage of my state, as at that time",
       "Through all the signories it was the first,",
@@ -362,7 +370,9 @@
       "And to my state grew stranger, being transported And rapt in secret studies. Thy false uncle— Dost thou attend me?"
     ],
     "prospero_nitwood": [
-      "M b a t u, c A— I p t, m m—t a b s B s p!—h w n t",
+      "M b a t u, c A—",
+      "I p t, m m—t a b s",
+      "B s p!—h w n t",
       "O a t w I l, a t h p",
       "T m o m s, a a t t",
       "T a t s i w t f,",
@@ -2501,12 +2511,14 @@
     ],
     "prospero_lines": [
       "I rather think",
-      "You have not sought her help, of whose soft grace, For the like loss, I have her sovereign aid",
+      "You have not sought her help, of whose soft grace,",
+      "For the like loss, I have her sovereign aid",
       "And rest myself content."
     ],
     "prospero_nitwood": [
       "I r t",
-      "Y h n s h h, o w s g, F t l l, I h h s a",
+      "Y h n s h h, o w s g,",
+      "F t l l, I h h s a",
       "A r m c."
     ],
     "correct": null
@@ -2521,12 +2533,14 @@
     ],
     "prospero_lines": [
       "As great to me as late, and supportable",
-      "To make the dear loss have I means much weaker Than you may call to comfort you, for I",
+      "To make the dear loss have I means much weaker",
+      "Than you may call to comfort you, for I",
       "Have lost my daughter."
     ],
     "prospero_nitwood": [
       "A g t m a l, a s",
-      "T m t d l h I m m w T y m c t c y, f I",
+      "T m t d l h I m m w",
+      "T y m c t c y, f I",
       "H l m d."
     ],
     "correct": null
@@ -2545,9 +2559,11 @@
     "prospero_lines": [
       "In this last tempest. I perceive these lords",
       "At this encounter do so much admire",
-      "That they devour their reason, and scarce think Their eyes do offices of truth, their words",
+      "That they devour their reason, and scarce think",
+      "Their eyes do offices of truth, their words",
       "Are natural breath.—But howsoe’er you have",
-      "Been justled from your senses, know for certain That I am Prospero and that very duke",
+      "Been justled from your senses, know for certain",
+      "That I am Prospero and that very duke",
       "Which was thrust forth of Milan, who most",
       "strangely",
       "Upon this shore, where you were wracked, was landed",
@@ -2563,9 +2579,11 @@
     "prospero_nitwood": [
       "I t l t. I p t l",
       "A t e d s m a",
-      "T t d t r, a s t T e d o o t, t w",
+      "T t d t r, a s t",
+      "T e d o o t, t w",
       "A n b.—B h’e y h",
-      "B j f y s, k f c T I a P a t v d",
+      "B j f y s, k f c",
+      "T I a P a t v d",
       "W w t f o M, w m",
       "s",
       "U t s, w y w w, w l",
@@ -2688,7 +2706,8 @@
       "Mark but the badges of these men, my lords,",
       "Then say if they be true. This misshapen knave,",
       "His mother was a witch, and one so strong",
-      "That could control the moon, make flows and ebbs, And deal in her command without her power.",
+      "That could control the moon, make flows and ebbs,",
+      "And deal in her command without her power.",
       "These three have robbed me, and this demi-devil, For he’s a bastard one, had plotted with them",
       "To take my life. Two of these fellows you",
       "Must know and own. This thing of darkness I",
@@ -2698,7 +2717,8 @@
       "M b t b o t m, m l,",
       "T s i t b t. T m k,",
       "H m w a w, a o s s",
-      "T c c t m, m f a e, A d i h c w h p.",
+      "T c c t m, m f a e,",
+      "A d i h c w h p.",
       "T t h r m, a t d-d, F h’s a b o, h p w t",
       "T t m l. T o t f y",
       "M k a o. T t o d I",
@@ -2867,15 +2887,22 @@
                 alert('Please select a page number first');
                 return;
             }
-            // Find first card where Prospero's line is on target page
             let firstCardOnPage = cards.findIndex(card => card.page === targetPage);
             if (firstCardOnPage === -1) {
                 alert(`No cards found on page ${targetPage}`);
                 select.value = '';
                 return;
             }
-            // Show that card directly - it will display the cue from the previous card
-            currentIndex = firstCardOnPage;
+            let bestIndex = firstCardOnPage;
+            const prevPage = targetPage - 1;
+            for (let i = firstCardOnPage - 1; i >= 0; i--) {
+                if (cards[i].page === prevPage) {
+                    bestIndex = i;
+                } else if (cards[i].page < prevPage) {
+                    break;
+                }
+            }
+            currentIndex = bestIndex;
             isFlipped = false;
             jumpTargetPage = targetPage;
             displayCard();
